GRAXConnect/main/default/objects/GRAX_Archive_Process__c/GRAX_Archive_Process__c.object-meta.xml
<CustomObject>
    <label>GRAX Archive Process</label>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Archive Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Archive Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>