GRAXConnect/main/default/objects/GRAX_Archive_Process__c/fields/Async_Records_Successfully_Sent__c.field-meta.xml
<CustomField>
    <fullName>Async_Records_Successfully_Sent__c</fullName>
    <label># Async Records Successfully Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>