GRAXConnect/main/default/objects/GRAX_Archive_Process__c/fields/GRAX_Schedule_Process__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Schedule_Process__c</fullName>
    <label>GRAX Schedule Process</label>
    <referenceTo>GRAX_Schedule_Process__c</referenceTo>
    <relationshipLabel>GRAX Archive Processes</relationshipLabel>
    <relationshipName>GRAX_Archive_Processes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>