GRAXConnect/main/default/objects/GRAX_Archive_Process__c/fields/Records_Successfully_Sent__c.field-meta.xml
<CustomField>
    <fullName>Records_Successfully_Sent__c</fullName>
    <label># Records Successfully Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>