GRAXConnect/main/default/objects/GRAX_Archive_Process__c/fields/Records_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Records_To_Process__c</fullName>
    <label># Records To Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>