GRAXConnect/main/default/objects/GRAX_Archive_Process__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Records_To_Process__c &gt; 0 &amp;&amp; Records_Successfully_Sent__c = Records_To_Process__c &amp;&amp; Async_Records_Successfully_Sent__c = Async_Records_to_Process__c, &#39;Ready to Delete&#39;, &#39;Waiting to Complete Processing&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>